--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -209,7 +209,9 @@ In addition to lectures, there will be discussion sections held to provide more 
     \item An unexcused absence from a minimum competency exam will result in a score of zero on the exam with no opportunity for make-up.
     \item Your final grade will be reduced by one full letter for each minimum competency exam not passed by the deadline date.
   \end{itemize}
-\item[Application Exams] There will also be three application exams that are taken outside of lectures. The dates can be found on the course schedule. The application exams will be multiple choice exams that are designed to measure objectives at a higher cognitive level compared to the minimum competency exams. An unexcused absence from an application exam will result in a score of zero on the exam.
+  Additional information on the minimum competency exams can be found in the coursepack.
+\item[Application Exams] There will also be three application exams that are taken outside of lectures. The dates can be found on the course schedule. The application exams will be multiple choice exams that are designed to measure objectives at a higher cognitive level compared to the minimum competency exams. An unexcused absence from an application exam will result in a score of zero on the exam. \\
+Additional information on the application exams can be found in the coursepack.
 \item[Absences] An absence from either exam must be cleared with the instructor \textbf{before} the exam date. 
 \item[Grading] To be eligible for a C- in the course, students must meet the following requirements:
   \begin{enumerate}[label={(\alph*)}]
