--- a/Slides/Section2_4143.Rmd
+++ b/Slides/Section2_4143.Rmd
@@ -298,7 +298,7 @@ length_tab <- table(length_cut)
 cumfreq <- c(0, cumsum(length_tab))
 length_df <- data.frame(freq = c(0, length_tab), cf = cumfreq, brks = seq(70, 180, 10))
 cf <- ggplot(length_df, aes(x = brks, y = cf)) + theme_bw(base_size = 16)
-cf + geom_point() + geom_line() + 
+cf + geom_point(size = 5) + geom_line(size = 1) + 
   scale_x_continuous("Length", breaks = breaks) + 
   ylab("Cumulative Freq")
 ```
@@ -307,7 +307,7 @@ cf + geom_point() + geom_line() +
 ```{r ogivepercent}
 cf <- ggplot(length_df, aes(x = brks, y = I(cf/max(cf)*100))) + 
   theme_bw(base_size = 16)
-cf + geom_point() + geom_line() + 
+cf + geom_point(size = 5) + geom_line(size = 1) + 
   scale_x_continuous("Length", breaks = breaks) + 
   scale_y_continuous("Cumulative Per", breaks = seq(0, 100, 10))
 ```
@@ -342,7 +342,7 @@ cf + geom_point() + geom_line() +
 ```{r ogivepercent2}
 cf <- ggplot(length_df, aes(x = brks, y = I(cf/max(cf)*100))) + 
   theme_bw(base_size = 16)
-cf + geom_point() + geom_line() + 
+cf + geom_point(size = 5) + geom_line(size = 1) +  
   scale_x_continuous("Length", breaks = breaks) + 
   scale_y_continuous("Cumulative Per", breaks = seq(0, 100, 10))
 ```
