Fix typo in Section 2

--- a/Slides/Section2_4143.tex
+++ b/Slides/Section2_4143.tex
@@ -839,6 +839,8 @@ Ranks}\label{calculating-percentiles-and-percentile-ranks}
     \(X_{ll}\) = Lower limit of interval containing X
   \item
     \(X_{ul}\) = Upper limit of interval containing X
+  \item 
+     \(f_{i} \) = Number of observations within category.
   \end{itemize}
 \end{itemize}
 
